--- a/client/assets/User/index.html
+++ b/client/assets/User/index.html
@@ -12,7 +12,7 @@
 			<span ng-if='!isbcrypt(user.password)'>{{user.password}}</span>
 		</td>
 		<td>
-			<a href='#' ng-click='user_delete(user._id)'>Delete</a>
+			<a href='#' ng-click='delete(user._id)'>Delete</a>
 		</td>
 	</tr>
 </table>
